jcs5sb/src/pp2/parser.y
/* File: parser.y
 * --------------
 * Yacc input file to generate the parser for the compiler.
 *
 * pp2: your job is to write a parser that will construct the parse tree
 *      and if no parse errors were found, print it.  The parser should 
 *      accept the language as described in specification, and as augmented 
 *      in the pp2 handout.
 */

%{

/* Just like lex, the text within this first region delimited by %{ and %}
 * is assumed to be C/C++ code and will be copied verbatim to the y.tab.c
 * file ahead of the definitions of the yyparse() function. Add other header
 * file inclusions or C++ variable declarations/prototypes that are needed
 * by your code here.
 */
#include "scanner.h" // for yylex
#include "parser.h"
#include "errors.h"

void yyerror(const char *msg); // standard error-handling routine

%}

/* The section before the first %% is the Definitions section of the yacc
 * input file. Here is where you declare tokens and types, add precedence
 * and associativity options, and so on.
 */
 
/* yylval 
 * ------
 * Here we define the type of the yylval global variable that is used by
 * the scanner to store attibute information about the token just scanned
 * and thus communicate that information to the parser. 
 *
 * pp2: You will need to add new fields to this union as you add different 
 *      attributes to your non-terminal symbols.
 */
%union {
    int integerConstant;
    bool boolConstant;
    char *stringConstant;
    double doubleConstant;
    char identifier[MaxIdentLen+1]; // +1 for terminating null
    Decl *decl;
    VarDecl *var;
    FnDecl *fDecl;
    Type *type;
    NamedType *namedType;
    Stmt *stmt;
    Expr *expr;
    List<Stmt*> *stmtList;
    List<VarDecl*> *varList;
    List<Decl*> *declList;
    List<Expr*> *exprList;
    List<NamedType*> *typeList;
}


/* Tokens
 * ------
 * Here we tell yacc about all the token types that we are using.
 * Yacc will assign unique numbers to these and export the #define
 * in the generated y.tab.h header file.
 */
%token   T_Void T_Bool T_Int T_Double T_String T_Class 
%token   T_LessEqual T_GreaterEqual T_Equal T_NotEqual T_Dims
%token   T_And T_Or T_Null T_Extends T_This T_Interface T_Implements
%token   T_While T_For T_If T_Else T_Return T_Break
%token   T_New T_NewArray T_Print T_ReadInteger T_ReadLine

%token   <identifier> T_Identifier
%token   <stringConstant> T_StringConstant 
%token   <integerConstant> T_IntConstant
%token   <doubleConstant> T_DoubleConstant
%token   <boolConstant> T_BoolConstant


/* Non-terminal types
 * ------------------
 * In order for yacc to assign/access the correct field of $$, $1, we
 * must to declare which field is appropriate for the non-terminal.
 * As an example, this first type declaration establishes that the DeclList
 * non-terminal uses the field named "declList" in the yylval union. This
 * means that when we are setting $$ for a reduction for DeclList ore reading
 * $n which corresponds to a DeclList nonterminal we are accessing the field
 * of the union named "declList" which is of type List<Decl*>.
 * pp2: You'll need to add many of these of your own.
 */
%type <declList>  DeclList Prototypes PrototypeList Fields FieldList
%type <decl>      Decl ClassDecl InterfaceDecl Prototype Field
%type <type>      Type 
%type <namedType> Interface Superclass
%type <var>       Variable VarDecl
%type <varList>   Formals FormalList VarDecls
%type <fDecl>     FnDecl FnHeader
%type <stmtList>  StmtList
%type <stmt>      StmtBlock Stmt 
%type <expr>      Expr ExprOrNot LValue Constant Call AtomicExpr AddExpr MultExpr OrExpr AndExpr RelationalExpr UnaryExpr
%type <exprList>  Actuals ActualList
%type <typeList>  Interfaces InterfaceList

%%
/* Rules
 * -----
 * All productions and actions should be placed between the start and stop
 * %% markers which delimit the Rules section.
	 
 */
Program   :    DeclList            { 
                                      @1; 
                                      /* pp2: The @1 is needed to convince 
                                       * yacc to set up yylloc. You can remove 
                                       * it once you have other uses of @n*/
                                      Program *program = new Program($1);
                                      // if no errors, advance to next phase
                                      if (ReportError::NumErrors() == 0) 
                                          program->Print(0);
                                    }
          ;

DeclList  :    DeclList Decl        { ($$=$1)->Append($2); }
          |    Decl                 { ($$ = new List<Decl*>)->Append($1); };

Decl      :    VarDecl              { $$=$1; }
          |    FnDecl               { $$=$1; }
          |    ClassDecl            {$$ = $1;}
          |    InterfaceDecl        {$$ = $1;}
;

ClassDecl : T_Class T_Identifier Superclass Interfaces '{' Fields '}' 
            {$$ = new ClassDecl(new Identifier(@2,$2), $3, $4, $6);} ;

Superclass  : T_Extends T_Identifier  {$$ = new NamedType(new Identifier(@2,$2));}
            | /* empty */ {$$ = NULL;}

Interface   : T_Identifier  {$$ = new NamedType(new Identifier(@1,$1));} ;

Interfaces   :   T_Implements InterfaceList           { $$ = $2; }
          |    /* empty */          { $$ = new List<NamedType*>; }
;

InterfaceList:    InterfaceList ',' Interface  { ($$=$1)->Append($3); }
          |    Interface             { ($$ = new List<NamedType*>)->Append($1); }
;

Field   : VarDecl {$$ = $1;} | FnDecl {$$ = $1;} ;

Fields   :   FieldList           { $$ = $1; }
          |    /* empty */          { $$ = new List<Decl*>; }
;

FieldList :    FieldList Field  { ($$=$1)->Append($2); }
          |    Field             { ($$ = new List<Decl*>)->Append($1); }
;

InterfaceDecl   : T_Interface T_Identifier '{' Prototypes '}' 
                  {$$ = new InterfaceDecl(new Identifier(@2, $2), $4);} ;

Prototype       : FnHeader ';' {$$ = $1;} ;

Prototypes   :    PrototypeList           { $$ = $1; }
          |    /* empty */          { $$ = new List<Decl*>; }
;

PrototypeList:    PrototypeList Prototype  { ($$=$1)->Append($2); }
          |    Prototype             { ($$ = new List<Decl*>)->Append($1); }
;

VarDecl   :    Variable ';'         { $$=$1; }
; 

Variable   :   Type T_Identifier    { $$ = new VarDecl(new Identifier(@2, $2), $1); }
;

Type      :    T_Int                { $$ = Type::intType; }
          |    T_Bool               { $$ = Type::boolType; }
          |    T_String             { $$ = Type::stringType; }
          |    T_Double             { $$ = Type::doubleType; }
          |    T_Identifier         { $$ = new NamedType(new Identifier(@1,$1)); }
          |    Type T_Dims          { $$ = new ArrayType(Join(@1, @2), $1); }
;

FnDecl    :    FnHeader StmtBlock   { ($$=$1)->SetFunctionBody($2); }
;

FnHeader  :    Type T_Identifier '(' Formals ')'  
                                    { $$ = new FnDecl(new Identifier(@2, $2), $1, $4); }
          |    T_Void T_Identifier '(' Formals ')' 
                                    { $$ = new FnDecl(new Identifier(@2, $2), Type::voidType, $4); }
;

Formals   :    FormalList           { $$ = $1; }
          |    /* empty */          { $$ = new List<VarDecl*>; }
;

FormalList:    FormalList ',' Variable  
                                    { ($$=$1)->Append($3); }
          |    Variable             { ($$ = new List<VarDecl*>)->Append($1); }
;

StmtBlock :    '{' VarDecls StmtList '}' { $$ = new StmtBlock($2, $3); }
          |    '{' VarDecls '}' { $$ = new StmtBlock($2, new List<Stmt*>); }
;

VarDecls  : VarDecls VarDecl     { ($$=$1)->Append($2); }
          | /* empty*/           { $$ = new List<VarDecl*>; }
;

StmtList  : StmtList Stmt  { ($$=$1)->Append($2); }
          | Stmt     { $$ = new List<Stmt*>;$$->Append($1); }
;

Stmt      : ExprOrNot ';'                                         {$$ = $1;}
          | T_Break ';'                                           {$$ = new BreakStmt(@1);}
          | T_Return ExprOrNot ';'                                {$$ = new ReturnStmt(@1, $2);}
          | T_Print '(' ActualList ')' ';'                        {$$ = new PrintStmt($3);}
          | StmtBlock                                             {$$ = $1;}
          | T_While '(' Expr ')' Stmt                             {$$ = new WhileStmt($3, $5);}
          | T_For '(' ExprOrNot ';' Expr ';' ExprOrNot ')' Stmt   {$$ = new ForStmt($3, $5, $7, $9);}
          | T_If '(' Expr ')' Stmt                                {$$ = new IfStmt($3, $5, NULL);} 
          | T_If '(' Expr ')' Stmt T_Else Stmt                    {$$ = new IfStmt($3, $5, $7);} 
;

ExprOrNot : Expr {$$ = $1;} | {$$ = new EmptyExpr();} ;

Expr      : LValue '=' Expr   {$$ = new AssignExpr($1, new Operator(@2, "="), $3);}
          | OrExpr            {$$ = $1;}
;

OrExpr    : AndExpr                   {$$ = $1;}
          | OrExpr T_Or AndExpr       {$$ = new LogicalExpr($1, new Operator(@2, "||"), $3);}
;

AndExpr   : RelationalExpr                {$$ = $1;}
          | AndExpr T_And RelationalExpr  {$$ = new LogicalExpr($1, new Operator(@2, "&&"), $3);}
;

AddExpr   : MultExpr                  {$$ = $1;}
          | AddExpr '+' MultExpr      {$$ = new ArithmeticExpr($1, new Operator(@2, "+"), $3);}
          | AddExpr '-' MultExpr      {$$ = new ArithmeticExpr($1, new Operator(@2, "-"), $3);}
;

MultExpr  : UnaryExpr                {$$ = $1;}
          | MultExpr '*' UnaryExpr   {$$ = new ArithmeticExpr($1, new Operator(@2, "*"), $3);}
          | MultExpr '/' UnaryExpr   {$$ = new ArithmeticExpr($1, new Operator(@2, "/"), $3);}
          | MultExpr '%' UnaryExpr   {$$ = new ArithmeticExpr($1, new Operator(@2, "%"), $3);}
;

RelationalExpr  : AddExpr {$$ = $1;}
                | AddExpr T_Equal AddExpr          {$$ = new EqualityExpr($1, new Operator(@2, "=="), $3);}
                | AddExpr T_NotEqual AddExpr       {$$ = new EqualityExpr($1, new Operator(@2, "!="), $3);}
                | AddExpr T_LessEqual AddExpr      {$$ = new RelationalExpr($1, new Operator(@2, "<="), $3);}
                | AddExpr T_GreaterEqual AddExpr   {$$ = new RelationalExpr($1, new Operator(@2, ">="), $3);}
                | AddExpr '<' AddExpr              {$$ = new RelationalExpr($1, new Operator(@2, "<"), $3);}
                | AddExpr '>' AddExpr              {$$ = new RelationalExpr($1, new Operator(@2, ">"), $3);}
;

UnaryExpr : '-' AtomicExpr    {$$ = new ArithmeticExpr(new Operator(@1, "-"), $2);}
          | '!' AtomicExpr    {$$ = new LogicalExpr(new Operator(@1, "!"), $2);}
          | AtomicExpr        {$$ = $1;}
;

AtomicExpr: '(' Expr ')'                      {$$ = $2;}
          | T_ReadInteger '(' ')'             {$$ = new ReadIntegerExpr(@1);}
          | T_ReadLine '(' ')'                {$$ = new ReadLineExpr(@1);}
          | Constant                          {$$ = $1;}
          | LValue                            {$$ = $1;}
          | T_This                            {$$ = new This(@1);}
          | Call                              {$$ = $1;}
          | T_New '(' T_Identifier ')'        {$$ = new NewExpr(@1, new NamedType(new Identifier(@3,$3)));}
          | T_NewArray '(' Expr ',' Type ')'  {$$ = new NewArrayExpr(@1, $3, $5);}
;

LValue    : T_Identifier                {$$ = new FieldAccess(NULL, new Identifier(@1, $1));} 
          | AtomicExpr '.' T_Identifier {$$ = new FieldAccess($1, new Identifier(@3, $3));} 
;

Constant  : T_IntConstant {$$ = new IntConstant(@1, $1);} 
          | T_DoubleConstant {$$ = new DoubleConstant(@1, $1);}
          | T_BoolConstant {$$ = new BoolConstant(@1, $1);}
          | T_StringConstant {$$ = new StringConstant(@1, $1);}
          | T_Null {$$ = new NullConstant(@1);}
;

Call      : T_Identifier '(' Actuals ')' {$$ = new Call(@1, NULL, new Identifier(@1, $1), $3);}
          | AtomicExpr '.' T_Identifier '(' Actuals ')' {$$ = new Call(@1, $1, new Identifier(@3, $3), $5);}
;

Actuals   :    ActualList           { $$ = $1; }
          |    /* empty */          { $$ = new List<Expr*>; }
;

ActualList:    ActualList ',' Expr  
                                    { ($$=$1)->Append($3); }
          |    Expr             { ($$ = new List<Expr*>)->Append($1); }
;

%%

/* The closing %% above marks the end of the Rules section and the beginning
 * of the User Subroutines section. All text from here to the end of the
 * file is copied verbatim to the end of the generated y.tab.c file.
 * This section is where you put definitions of helper functions.
 */

/* Function: InitParser
 * --------------------
 * This function will be called before any calls to yyparse().  It is designed
 * to give you an opportunity to do anything that must be done to initialize
 * the parser (set global variables, configure starting state, etc.). One
 * thing it already does for you is assign the value of the global variable
 * yydebug that controls whether yacc prints debugging information about
 * parser actions (shift/reduce) and contents of state stack during parser.
 * If set to false, no information is printed. Setting it to true will give
 * you a running trail that might be helpful when debugging your parser.
 * Please be sure the variable is set to false when submitting your final
 * version.
 */
void InitParser()
{
   PrintDebug("parser", "Initializing parser");
   yydebug = false;
}
