jcs5sb/src/pp2/y.output
Terminals unused in grammar

   T_Class
   T_Extends
   T_Interface
   T_Implements


State 146 conflicts: 1 shift/reduce


Grammar

    0 $accept: Program $end

    1 Program: DeclList

    2 DeclList: DeclList Decl
    3         | Decl

    4 Decl: VarDecl
    5     | FnDecl

    6 VarDecl: Variable ';'

    7 Variable: Type T_Identifier

    8 Type: T_Int
    9     | T_Bool
   10     | T_String
   11     | T_Double
   12     | T_Identifier
   13     | Type T_Dims

   14 FnDecl: FnHeader StmtBlock

   15 FnHeader: Type T_Identifier '(' Formals ')'
   16         | T_Void T_Identifier '(' Formals ')'

   17 Formals: FormalList
   18        | /* empty */

   19 FormalList: FormalList ',' Variable
   20           | Variable

   21 StmtBlock: '{' VarDecls StmtList '}'
   22          | '{' VarDecls '}'

   23 VarDecls: VarDecls VarDecl
   24         | /* empty */

   25 StmtList: StmtList Stmt
   26         | Stmt

   27 Stmt: ExprOrNot ';'
   28     | T_Break ';'
   29     | T_Return ExprOrNot ';'
   30     | T_Print '(' ActualList ')' ';'
   31     | StmtBlock
   32     | T_While '(' Expr ')' Stmt
   33     | T_For '(' ExprOrNot ';' Expr ';' ExprOrNot ')' Stmt
   34     | T_If '(' Expr ')' Stmt
   35     | T_If '(' Expr ')' Stmt T_Else Stmt

   36 ExprOrNot: Expr
   37          | /* empty */

   38 Expr: LValue '=' Expr
   39     | OrExpr

   40 OrExpr: AndExpr
   41       | OrExpr T_Or AndExpr

   42 AndExpr: RelationalExpr
   43        | AndExpr T_And RelationalExpr

   44 AddExpr: MultExpr
   45        | AddExpr '+' MultExpr
   46        | AddExpr '-' MultExpr

   47 MultExpr: UnaryExpr
   48         | MultExpr '*' UnaryExpr
   49         | MultExpr '/' UnaryExpr
   50         | MultExpr '%' UnaryExpr

   51 RelationalExpr: AddExpr
   52               | AddExpr T_Equal AddExpr
   53               | AddExpr T_NotEqual AddExpr
   54               | AddExpr T_LessEqual AddExpr
   55               | AddExpr T_GreaterEqual AddExpr
   56               | AddExpr '<' AddExpr
   57               | AddExpr '>' AddExpr

   58 UnaryExpr: '-' AtomicExpr
   59          | '!' AtomicExpr
   60          | AtomicExpr

   61 AtomicExpr: '(' Expr ')'
   62           | T_ReadInteger '(' ')'
   63           | T_ReadLine '(' ')'
   64           | Constant
   65           | LValue
   66           | T_This
   67           | Call
   68           | T_New '(' T_Identifier ')'
   69           | T_NewArray '(' Expr ',' Type ')'

   70 LValue: T_Identifier

   71 Constant: T_IntConstant
   72         | T_DoubleConstant
   73         | T_BoolConstant
   74         | T_StringConstant
   75         | T_Null

   76 Call: T_Identifier '(' Actuals ')'
   77     | AtomicExpr '.' T_Identifier '(' Actuals ')'

   78 Actuals: ActualList
   79        | /* empty */

   80 ActualList: ActualList ',' Expr
   81           | Expr


Terminals, with rules where they appear

$end (0) 0
'!' (33) 59
'%' (37) 50
'(' (40) 15 16 30 32 33 34 35 61 62 63 68 69 76 77
')' (41) 15 16 30 32 33 34 35 61 62 63 68 69 76 77
'*' (42) 48
'+' (43) 45
',' (44) 19 69 80
'-' (45) 46 58
'.' (46) 77
'/' (47) 49
';' (59) 6 27 28 29 30 33
'<' (60) 56
'=' (61) 38
'>' (62) 57
'{' (123) 21 22
'}' (125) 21 22
error (256)
T_Void (258) 16
T_Bool (259) 9
T_Int (260) 8
T_Double (261) 11
T_String (262) 10
T_Class (263)
T_LessEqual (264) 54
T_GreaterEqual (265) 55
T_Equal (266) 52
T_NotEqual (267) 53
T_Dims (268) 13
T_And (269) 43
T_Or (270) 41
T_Null (271) 75
T_Extends (272)
T_This (273) 66
T_Interface (274)
T_Implements (275)
T_While (276) 32
T_For (277) 33
T_If (278) 34 35
T_Else (279) 35
T_Return (280) 29
T_Break (281) 28
T_New (282) 68
T_NewArray (283) 69
T_Print (284) 30
T_ReadInteger (285) 62
T_ReadLine (286) 63
T_Identifier (287) 7 12 15 16 68 70 76 77
T_StringConstant (288) 74
T_IntConstant (289) 71
T_DoubleConstant (290) 72
T_BoolConstant (291) 73


Nonterminals, with rules where they appear

$accept (53)
    on left: 0
Program (54)
    on left: 1, on right: 0
DeclList (55)
    on left: 2 3, on right: 1 2
Decl (56)
    on left: 4 5, on right: 2 3
VarDecl (57)
    on left: 6, on right: 4 23
Variable (58)
    on left: 7, on right: 6 19 20
Type (59)
    on left: 8 9 10 11 12 13, on right: 7 13 15 69
FnDecl (60)
    on left: 14, on right: 5
FnHeader (61)
    on left: 15 16, on right: 14
Formals (62)
    on left: 17 18, on right: 15 16
FormalList (63)
    on left: 19 20, on right: 17 19
StmtBlock (64)
    on left: 21 22, on right: 14 31
VarDecls (65)
    on left: 23 24, on right: 21 22 23
StmtList (66)
    on left: 25 26, on right: 21 25
Stmt (67)
    on left: 27 28 29 30 31 32 33 34 35, on right: 25 26 32 33 34 35
ExprOrNot (68)
    on left: 36 37, on right: 27 29 33
Expr (69)
    on left: 38 39, on right: 32 33 34 35 36 38 61 69 80 81
OrExpr (70)
    on left: 40 41, on right: 39 41
AndExpr (71)
    on left: 42 43, on right: 40 41 43
AddExpr (72)
    on left: 44 45 46, on right: 45 46 51 52 53 54 55 56 57
MultExpr (73)
    on left: 47 48 49 50, on right: 44 45 46 48 49 50
RelationalExpr (74)
    on left: 51 52 53 54 55 56 57, on right: 42 43
UnaryExpr (75)
    on left: 58 59 60, on right: 47 48 49 50
AtomicExpr (76)
    on left: 61 62 63 64 65 66 67 68 69, on right: 58 59 60 77
LValue (77)
    on left: 70, on right: 38 65
Constant (78)
    on left: 71 72 73 74 75, on right: 64
Call (79)
    on left: 76 77, on right: 67
Actuals (80)
    on left: 78 79, on right: 76 77
ActualList (81)
    on left: 80 81, on right: 30 78 80


state 0

    0 $accept: . Program $end

    T_Void        shift, and go to state 1
    T_Bool        shift, and go to state 2
    T_Int         shift, and go to state 3
    T_Double      shift, and go to state 4
    T_String      shift, and go to state 5
    T_Identifier  shift, and go to state 6

    Program   go to state 7
    DeclList  go to state 8
    Decl      go to state 9
    VarDecl   go to state 10
    Variable  go to state 11
    Type      go to state 12
    FnDecl    go to state 13
    FnHeader  go to state 14


state 1

   16 FnHeader: T_Void . T_Identifier '(' Formals ')'

    T_Identifier  shift, and go to state 15


state 2

    9 Type: T_Bool .

    $default  reduce using rule 9 (Type)


state 3

    8 Type: T_Int .

    $default  reduce using rule 8 (Type)


state 4

   11 Type: T_Double .

    $default  reduce using rule 11 (Type)


state 5

   10 Type: T_String .

    $default  reduce using rule 10 (Type)


state 6

   12 Type: T_Identifier .

    $default  reduce using rule 12 (Type)


state 7

    0 $accept: Program . $end

    $end  shift, and go to state 16


state 8

    1 Program: DeclList .
    2 DeclList: DeclList . Decl

    T_Void        shift, and go to state 1
    T_Bool        shift, and go to state 2
    T_Int         shift, and go to state 3
    T_Double      shift, and go to state 4
    T_String      shift, and go to state 5
    T_Identifier  shift, and go to state 6

    $default  reduce using rule 1 (Program)

    Decl      go to state 17
    VarDecl   go to state 10
    Variable  go to state 11
    Type      go to state 12
    FnDecl    go to state 13
    FnHeader  go to state 14


state 9

    3 DeclList: Decl .

    $default  reduce using rule 3 (DeclList)


state 10

    4 Decl: VarDecl .

    $default  reduce using rule 4 (Decl)


state 11

    6 VarDecl: Variable . ';'

    ';'  shift, and go to state 18


state 12

    7 Variable: Type . T_Identifier
   13 Type: Type . T_Dims
   15 FnHeader: Type . T_Identifier '(' Formals ')'

    T_Dims        shift, and go to state 19
    T_Identifier  shift, and go to state 20


state 13

    5 Decl: FnDecl .

    $default  reduce using rule 5 (Decl)


state 14

   14 FnDecl: FnHeader . StmtBlock

    '{'  shift, and go to state 21

    StmtBlock  go to state 22


state 15

   16 FnHeader: T_Void T_Identifier . '(' Formals ')'

    '('  shift, and go to state 23


state 16

    0 $accept: Program $end .

    $default  accept


state 17

    2 DeclList: DeclList Decl .

    $default  reduce using rule 2 (DeclList)


state 18

    6 VarDecl: Variable ';' .

    $default  reduce using rule 6 (VarDecl)


state 19

   13 Type: Type T_Dims .

    $default  reduce using rule 13 (Type)


state 20

    7 Variable: Type T_Identifier .
   15 FnHeader: Type T_Identifier . '(' Formals ')'

    '('  shift, and go to state 24

    $default  reduce using rule 7 (Variable)


state 21

   21 StmtBlock: '{' . VarDecls StmtList '}'
   22          | '{' . VarDecls '}'

    $default  reduce using rule 24 (VarDecls)

    VarDecls  go to state 25


state 22

   14 FnDecl: FnHeader StmtBlock .

    $default  reduce using rule 14 (FnDecl)


state 23

   16 FnHeader: T_Void T_Identifier '(' . Formals ')'

    T_Bool        shift, and go to state 2
    T_Int         shift, and go to state 3
    T_Double      shift, and go to state 4
    T_String      shift, and go to state 5
    T_Identifier  shift, and go to state 6

    $default  reduce using rule 18 (Formals)

    Variable    go to state 26
    Type        go to state 27
    Formals     go to state 28
    FormalList  go to state 29


state 24

   15 FnHeader: Type T_Identifier '(' . Formals ')'

    T_Bool        shift, and go to state 2
    T_Int         shift, and go to state 3
    T_Double      shift, and go to state 4
    T_String      shift, and go to state 5
    T_Identifier  shift, and go to state 6

    $default  reduce using rule 18 (Formals)

    Variable    go to state 26
    Type        go to state 27
    Formals     go to state 30
    FormalList  go to state 29


state 25

   21 StmtBlock: '{' VarDecls . StmtList '}'
   22          | '{' VarDecls . '}'
   23 VarDecls: VarDecls . VarDecl

    T_Bool            shift, and go to state 2
    T_Int             shift, and go to state 3
    T_Double          shift, and go to state 4
    T_String          shift, and go to state 5
    T_Null            shift, and go to state 31
    T_This            shift, and go to state 32
    T_While           shift, and go to state 33
    T_For             shift, and go to state 34
    T_If              shift, and go to state 35
    T_Return          shift, and go to state 36
    T_Break           shift, and go to state 37
    T_New             shift, and go to state 38
    T_NewArray        shift, and go to state 39
    T_Print           shift, and go to state 40
    T_ReadInteger     shift, and go to state 41
    T_ReadLine        shift, and go to state 42
    T_Identifier      shift, and go to state 43
    T_StringConstant  shift, and go to state 44
    T_IntConstant     shift, and go to state 45
    T_DoubleConstant  shift, and go to state 46
    T_BoolConstant    shift, and go to state 47
    '('               shift, and go to state 48
    '{'               shift, and go to state 21
    '}'               shift, and go to state 49
    '-'               shift, and go to state 50
    '!'               shift, and go to state 51

    $default  reduce using rule 37 (ExprOrNot)

    VarDecl         go to state 52
    Variable        go to state 11
    Type            go to state 27
    StmtBlock       go to state 53
    StmtList        go to state 54
    Stmt            go to state 55
    ExprOrNot       go to state 56
    Expr            go to state 57
    OrExpr          go to state 58
    AndExpr         go to state 59
    AddExpr         go to state 60
    MultExpr        go to state 61
    RelationalExpr  go to state 62
    UnaryExpr       go to state 63
    AtomicExpr      go to state 64
    LValue          go to state 65
    Constant        go to state 66
    Call            go to state 67


state 26

   20 FormalList: Variable .

    $default  reduce using rule 20 (FormalList)


state 27

    7 Variable: Type . T_Identifier
   13 Type: Type . T_Dims

    T_Dims        shift, and go to state 19
    T_Identifier  shift, and go to state 68


state 28

   16 FnHeader: T_Void T_Identifier '(' Formals . ')'

    ')'  shift, and go to state 69


state 29

   17 Formals: FormalList .
   19 FormalList: FormalList . ',' Variable

    ','  shift, and go to state 70

    $default  reduce using rule 17 (Formals)


state 30

   15 FnHeader: Type T_Identifier '(' Formals . ')'

    ')'  shift, and go to state 71


state 31

   75 Constant: T_Null .

    $default  reduce using rule 75 (Constant)


state 32

   66 AtomicExpr: T_This .

    $default  reduce using rule 66 (AtomicExpr)


state 33

   32 Stmt: T_While . '(' Expr ')' Stmt

    '('  shift, and go to state 72


state 34

   33 Stmt: T_For . '(' ExprOrNot ';' Expr ';' ExprOrNot ')' Stmt

    '('  shift, and go to state 73


state 35

   34 Stmt: T_If . '(' Expr ')' Stmt
   35     | T_If . '(' Expr ')' Stmt T_Else Stmt

    '('  shift, and go to state 74


state 36

   29 Stmt: T_Return . ExprOrNot ';'

    T_Null            shift, and go to state 31
    T_This            shift, and go to state 32
    T_New             shift, and go to state 38
    T_NewArray        shift, and go to state 39
    T_ReadInteger     shift, and go to state 41
    T_ReadLine        shift, and go to state 42
    T_Identifier      shift, and go to state 75
    T_StringConstant  shift, and go to state 44
    T_IntConstant     shift, and go to state 45
    T_DoubleConstant  shift, and go to state 46
    T_BoolConstant    shift, and go to state 47
    '('               shift, and go to state 48
    '-'               shift, and go to state 50
    '!'               shift, and go to state 51

    $default  reduce using rule 37 (ExprOrNot)

    ExprOrNot       go to state 76
    Expr            go to state 57
    OrExpr          go to state 58
    AndExpr         go to state 59
    AddExpr         go to state 60
    MultExpr        go to state 61
    RelationalExpr  go to state 62
    UnaryExpr       go to state 63
    AtomicExpr      go to state 64
    LValue          go to state 65
    Constant        go to state 66
    Call            go to state 67


state 37

   28 Stmt: T_Break . ';'

    ';'  shift, and go to state 77


state 38

   68 AtomicExpr: T_New . '(' T_Identifier ')'

    '('  shift, and go to state 78


state 39

   69 AtomicExpr: T_NewArray . '(' Expr ',' Type ')'

    '('  shift, and go to state 79


state 40

   30 Stmt: T_Print . '(' ActualList ')' ';'

    '('  shift, and go to state 80


state 41

   62 AtomicExpr: T_ReadInteger . '(' ')'

    '('  shift, and go to state 81


state 42

   63 AtomicExpr: T_ReadLine . '(' ')'

    '('  shift, and go to state 82


state 43

   12 Type: T_Identifier .
   70 LValue: T_Identifier .
   76 Call: T_Identifier . '(' Actuals ')'

    '('  shift, and go to state 83

    T_Dims        reduce using rule 12 (Type)
    T_Identifier  reduce using rule 12 (Type)
    $default      reduce using rule 70 (LValue)


state 44

   74 Constant: T_StringConstant .

    $default  reduce using rule 74 (Constant)


state 45

   71 Constant: T_IntConstant .

    $default  reduce using rule 71 (Constant)


state 46

   72 Constant: T_DoubleConstant .

    $default  reduce using rule 72 (Constant)


state 47

   73 Constant: T_BoolConstant .

    $default  reduce using rule 73 (Constant)


state 48

   61 AtomicExpr: '(' . Expr ')'

    T_Null            shift, and go to state 31
    T_This            shift, and go to state 32
    T_New             shift, and go to state 38
    T_NewArray        shift, and go to state 39
    T_ReadInteger     shift, and go to state 41
    T_ReadLine        shift, and go to state 42
    T_Identifier      shift, and go to state 75
    T_StringConstant  shift, and go to state 44
    T_IntConstant     shift, and go to state 45
    T_DoubleConstant  shift, and go to state 46
    T_BoolConstant    shift, and go to state 47
    '('               shift, and go to state 48
    '-'               shift, and go to state 50
    '!'               shift, and go to state 51

    Expr            go to state 84
    OrExpr          go to state 58
    AndExpr         go to state 59
    AddExpr         go to state 60
    MultExpr        go to state 61
    RelationalExpr  go to state 62
    UnaryExpr       go to state 63
    AtomicExpr      go to state 64
    LValue          go to state 65
    Constant        go to state 66
    Call            go to state 67


state 49

   22 StmtBlock: '{' VarDecls '}' .

    $default  reduce using rule 22 (StmtBlock)


state 50

   58 UnaryExpr: '-' . AtomicExpr

    T_Null            shift, and go to state 31
    T_This            shift, and go to state 32
    T_New             shift, and go to state 38
    T_NewArray        shift, and go to state 39
    T_ReadInteger     shift, and go to state 41
    T_ReadLine        shift, and go to state 42
    T_Identifier      shift, and go to state 75
    T_StringConstant  shift, and go to state 44
    T_IntConstant     shift, and go to state 45
    T_DoubleConstant  shift, and go to state 46
    T_BoolConstant    shift, and go to state 47
    '('               shift, and go to state 48

    AtomicExpr  go to state 85
    LValue      go to state 86
    Constant    go to state 66
    Call        go to state 67


state 51

   59 UnaryExpr: '!' . AtomicExpr

    T_Null            shift, and go to state 31
    T_This            shift, and go to state 32
    T_New             shift, and go to state 38
    T_NewArray        shift, and go to state 39
    T_ReadInteger     shift, and go to state 41
    T_ReadLine        shift, and go to state 42
    T_Identifier      shift, and go to state 75
    T_StringConstant  shift, and go to state 44
    T_IntConstant     shift, and go to state 45
    T_DoubleConstant  shift, and go to state 46
    T_BoolConstant    shift, and go to state 47
    '('               shift, and go to state 48

    AtomicExpr  go to state 87
    LValue      go to state 86
    Constant    go to state 66
    Call        go to state 67


state 52

   23 VarDecls: VarDecls VarDecl .

    $default  reduce using rule 23 (VarDecls)


state 53

   31 Stmt: StmtBlock .

    $default  reduce using rule 31 (Stmt)


state 54

   21 StmtBlock: '{' VarDecls StmtList . '}'
   25 StmtList: StmtList . Stmt

    T_Null            shift, and go to state 31
    T_This            shift, and go to state 32
    T_While           shift, and go to state 33
    T_For             shift, and go to state 34
    T_If              shift, and go to state 35
    T_Return          shift, and go to state 36
    T_Break           shift, and go to state 37
    T_New             shift, and go to state 38
    T_NewArray        shift, and go to state 39
    T_Print           shift, and go to state 40
    T_ReadInteger     shift, and go to state 41
    T_ReadLine        shift, and go to state 42
    T_Identifier      shift, and go to state 75
    T_StringConstant  shift, and go to state 44
    T_IntConstant     shift, and go to state 45
    T_DoubleConstant  shift, and go to state 46
    T_BoolConstant    shift, and go to state 47
    '('               shift, and go to state 48
    '{'               shift, and go to state 21
    '}'               shift, and go to state 88
    '-'               shift, and go to state 50
    '!'               shift, and go to state 51

    $default  reduce using rule 37 (ExprOrNot)

    StmtBlock       go to state 53
    Stmt            go to state 89
    ExprOrNot       go to state 56
    Expr            go to state 57
    OrExpr          go to state 58
    AndExpr         go to state 59
    AddExpr         go to state 60
    MultExpr        go to state 61
    RelationalExpr  go to state 62
    UnaryExpr       go to state 63
    AtomicExpr      go to state 64
    LValue          go to state 65
    Constant        go to state 66
    Call            go to state 67


state 55

   26 StmtList: Stmt .

    $default  reduce using rule 26 (StmtList)


state 56

   27 Stmt: ExprOrNot . ';'

    ';'  shift, and go to state 90


state 57

   36 ExprOrNot: Expr .

    $default  reduce using rule 36 (ExprOrNot)


state 58

   39 Expr: OrExpr .
   41 OrExpr: OrExpr . T_Or AndExpr

    T_Or  shift, and go to state 91

    $default  reduce using rule 39 (Expr)


state 59

   40 OrExpr: AndExpr .
   43 AndExpr: AndExpr . T_And RelationalExpr

    T_And  shift, and go to state 92

    $default  reduce using rule 40 (OrExpr)


state 60
